--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
-  "name": "personal-blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  }
+	"name": "personal-blog",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"check": "biome check --write"
+	},
+	"dependencies": {
+		"@mantine/hooks": "^8.1.1",
+		"@payloadcms/db-sqlite": "^3.43.0",
+		"@payloadcms/next": "^3.43.0",
+		"@payloadcms/richtext-lexical": "^3.43.0",
+		"@radix-ui/react-slot": "^1.2.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"graphql": "^16.11.0",
+		"lucide-react": "^0.522.0",
+		"next": "15.3.4",
+		"next-themes": "^0.4.6",
+		"payload": "^3.43.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"sharp": "^0.34.2",
+		"tailwind-merge": "^3.3.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.0.4",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.3.4",
+		"typescript": "^5"
+	}
 }
