--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"check": "biome check --write"
+		"check": "biome check --write",
+		"drizzle:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
 		"@mantine/hooks": "^8.1.1",
@@ -18,6 +19,7 @@
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.44.2",
 		"graphql": "^16.11.0",
 		"lucide-react": "^0.522.0",
 		"next": "15.3.4",
@@ -34,6 +36,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.31.4",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.3.4",
 		"typescript": "^5"
